web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-func-expr-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,21)
2|const a = function (let) {}
 |                   ^
[SyntaxError]: unexpect keyword in strict mode (2,21)
2|const a = function (let) {}
 |                   ^
